--- a/index.html
+++ b/index.html
@@ -6,8 +6,60 @@
 </head>
 
 <body>
-  <div>
-
+  <div class="header_container">
+    <div class="header_logo_typo">
+      Company name
+    </div>
+    <div class="header_menu_container">
+      <div class="header_menu_typo">
+        Features
+      </div>
+      <div class="header_menu_typo">
+        Enterprise
+      </div>
+      <div class="header_menu_typo">
+        Support
+      </div>
+      <div class="header_menu_typo">
+        Pricing
+      </div>
+      <div class="header_menu_button_wrapper">
+        <div class="header_menu_button_typo">
+          Sign Up
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="main_container">
+    <div class="main_title_typo">
+      Pricing
+    </div>
+    <div class="main_explain_typo">
+      Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with
+      default Bootstrap components and utilities with little customization.
+    </div>
+  </div>
+  <div class="tab_container">
+    <div class="tab_free_container">
+      <div class="tab_free_title_wrapper">
+        <div class="tab_free_title_typo">Free</div>
+      </div>
+      <div class="tab_free_explain_container">
+        <div class="tab_free_explain_price_wrapper">
+          <div class="tab_free_explain_price_typo">$0</div>
+          <div class="tab_free_explain_mo_typo">/ mo</div>
+        </div>
+        <div class="tab_free_explain_typo">10 users included</div>
+        <div class="tab_free_explain_typo">2 GB of storage</div>
+        <div class="tab_free_explain_typo">Email support</div>
+        <div class="tab_free_explain_typo">Help center access</div>
+        <div class="tab_free_button_wrapper">
+          <div class="tab_free_button_typo">Sign up for free</div>
+        </div>
+      </div>
+    </div>
+    <div class="tab_pro_container"></div>
+    <div class="tab_Enterprise_container"></div>
   </div>
 </body>
 <link rel="stylesheet" href="default.css">
