Update: final Layout

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-  <title>동국대학교 react 스터디</title>
-
+  <title>동국대학교 react 스터디 1주차 과제</title>
+  <meta charset="utf-8" />
 </head>
 
 <body>
@@ -39,27 +39,98 @@
       default Bootstrap components and utilities with little customization.
     </div>
   </div>
-  <div class="tab_container">
-    <div class="tab_free_container">
-      <div class="tab_free_title_wrapper">
-        <div class="tab_free_title_typo">Free</div>
-      </div>
-      <div class="tab_free_explain_container">
-        <div class="tab_free_explain_price_wrapper">
-          <div class="tab_free_explain_price_typo">$0</div>
-          <div class="tab_free_explain_mo_typo">/ mo</div>
+  <div class="total_container">
+    <div class="tab_container">
+      <div class="tab_box_container">
+        <div class="tab_box_title_wrapper">
+          <div class="tab_box_title_typo">Free</div>
         </div>
-        <div class="tab_free_explain_typo">10 users included</div>
-        <div class="tab_free_explain_typo">2 GB of storage</div>
-        <div class="tab_free_explain_typo">Email support</div>
-        <div class="tab_free_explain_typo">Help center access</div>
-        <div class="tab_free_button_wrapper">
-          <div class="tab_free_button_typo">Sign up for free</div>
+        <div class="tab_box_explain_container">
+          <div class="tab_box_explain_price_wrapper">
+            <div class="tab_box_explain_price_typo">$0</div>
+            <div class="tab_box_explain_mo_typo">/ mo</div>
+          </div>
+          <div class="tab_box_explain_typo">10 users included</div>
+          <div class="tab_box_explain_typo">2 GB of storage</div>
+          <div class="tab_box_explain_typo">Email support</div>
+          <div class="tab_box_explain_typo">Help center access</div>
+          <div class="tab_box_button_wrapper">
+            <div class="tab_box_button_typo">Sign up for free</div>
+          </div>
+        </div>
+      </div>
+      <div class="tab_box_container">
+        <div class="tab_box_title_wrapper">
+          <div class="tab_box_title_typo">Pro</div>
+        </div>
+        <div class="tab_box_explain_container">
+          <div class="tab_box_explain_price_wrapper">
+            <div class="tab_box_explain_price_typo">$15</div>
+            <div class="tab_box_explain_mo_typo">/ mo</div>
+          </div>
+          <div class="tab_box_explain_typo">20 users included</div>
+          <div class="tab_box_explain_typo">10 GB of storage</div>
+          <div class="tab_box_explain_typo">Priority email support</div>
+          <div class="tab_box_explain_typo">Help center access</div>
+          <div class="tab_second_button_wrapper">
+            <div class="tab_second_button_typo">Get started</div>
+          </div>
+        </div>
+      </div>
+      <div class="tab_box_container">
+        <div class="tab_box_title_wrapper">
+          <div class="tab_box_title_typo">Enterprise</div>
+        </div>
+        <div class="tab_box_explain_container">
+          <div class="tab_box_explain_price_wrapper">
+            <div class="tab_box_explain_price_typo">$29</div>
+            <div class="tab_box_explain_mo_typo">/ mo</div>
+          </div>
+          <div class="tab_box_explain_typo">30 users included</div>
+          <div class="tab_box_explain_typo">15 GB of storage</div>
+          <div class="tab_box_explain_typo">Phone and email support</div>
+          <div class="tab_box_explain_typo">Help center access</div>
+          <div class="tab_second_button_wrapper">
+            <div class="tab_second_button_typo">Contact us</div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="tab_pro_container"></div>
-    <div class="tab_Enterprise_container"></div>
+    <div class="footer_container">
+      <div class="footer_img_container">
+        <img class="footer_img_typo" 	src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt width="24" heigth="24">
+        <div class="footer_img_text_typo">ⓒ 2017-2018</div>
+      </div>
+      <div class="footer_text_container">
+        <div class="footer_title_wrapper">
+          <div class="footer_title_typo">Features</div>
+        </div>
+        <div class="footer_menu_typo">Cool stuff</div>
+        <div class="footer_menu_typo">Random feature</div>
+        <div class="footer_menu_typo">Team feature</div>
+        <div class="footer_menu_typo">Stuff for developers</div>
+        <div class="footer_menu_typo">Another one</div>
+        <div class="footer_menu_typo">Last time</div>
+      </div>
+      <div class="footer_text_container">
+        <div class="footer_title_wrapper">
+          <div class="footer_title_typo">Resources</div>
+        </div>
+        <div class="footer_menu_typo">Resource</div>
+        <div class="footer_menu_typo">Resource name</div>
+        <div class="footer_menu_typo">Another resource</div>
+        <div class="footer_menu_typo">Final resource</div>
+      </div>
+      <div class="footer_text_container">
+        <div class="footer_title_wrapper">
+          <div class="footer_title_typo">About</div>
+        </div>
+        <div class="footer_menu_typo">Team</div>
+        <div class="footer_menu_typo">Locations</div>
+        <div class="footer_menu_typo">Privacy</div>
+        <div class="footer_menu_typo">Terms</div>
+      </div>
+    </div>
   </div>
 </body>
 <link rel="stylesheet" href="default.css">
