Update: feedback Layout

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
             <div class="tab_box_explain_price_typo">$0</div>
             <div class="tab_box_explain_mo_typo">/ mo</div>
           </div>
-          <div class="tab_box_explain_typo">10 users included</div>
-          <div class="tab_box_explain_typo">2 GB of storage</div>
-          <div class="tab_box_explain_typo">Email support</div>
-          <div class="tab_box_explain_typo">Help center access</div>
+          <div class="tab_box_explain_typo">10 users included <br>2 GB of storage <br>Email support <br>Help center access</div>
           <div class="tab_box_button_wrapper">
             <div class="tab_box_button_typo">Sign up for free</div>
           </div>
@@ -68,10 +65,7 @@
             <div class="tab_box_explain_price_typo">$15</div>
             <div class="tab_box_explain_mo_typo">/ mo</div>
           </div>
-          <div class="tab_box_explain_typo">20 users included</div>
-          <div class="tab_box_explain_typo">10 GB of storage</div>
-          <div class="tab_box_explain_typo">Priority email support</div>
-          <div class="tab_box_explain_typo">Help center access</div>
+          <div class="tab_box_explain_typo">20 users included <br>10 GB of storage <br>Priority email support <br>Help center access</div>
           <div class="tab_second_button_wrapper">
             <div class="tab_second_button_typo">Get started</div>
           </div>
@@ -86,10 +80,7 @@
             <div class="tab_box_explain_price_typo">$29</div>
             <div class="tab_box_explain_mo_typo">/ mo</div>
           </div>
-          <div class="tab_box_explain_typo">30 users included</div>
-          <div class="tab_box_explain_typo">15 GB of storage</div>
-          <div class="tab_box_explain_typo">Phone and email support</div>
-          <div class="tab_box_explain_typo">Help center access</div>
+          <div class="tab_box_explain_typo">30 users included <br>15 GB of storage <br>Phone and email support <br>Help center access</div>
           <div class="tab_second_button_wrapper">
             <div class="tab_second_button_typo">Contact us</div>
           </div>
